gitops/infra/observability/base/policies/allow-from-kube.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-kube
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key: kubernetes.io/metadata.name
              operator: In
              values:
                - ingress-nginx
                - cattle-system
                - cert-manager
                - kube-system
                - kube-public
                - operators
                - istio-system
                - default
        podSelector: {}
  policyTypes:
    - Ingress
